cmake_minimum_required(VERSION 3.10)
project(codeforces)

set(CMAKE_CXX_STANDARD 17)


# COMMON
#add_executable(codeforces common/b_subsequence_hate.cpp)
#add_executable(codeforces common/a_odd_selection.cpp)
#add_executable(codeforces common/a_berland_poker.cpp)
#add_executable(codeforces common/a_bmail_compter_network.cpp)
#add_executable(codeforces common/a_new_year_traspotation.cpp)
#add_executable(codeforces common/array_with_odd_sum.cpp)
#add_executable(codeforces common/a_minute_before_new_year.cpp)
#add_executable(codeforces common/a_soft_drink.cpp)
#add_executable(codeforces common/a_three_pile_of_candies.cpp)
#add_executable(codeforces common/b_badge.cpp)
#add_executable(codeforces common/b_fence.cpp)
add_executable(codeforces common/b_card_construction.cpp)

#add_executable(codeforces cf647/b.cpp)
#add_executable(codeforces cf647/c.cpp)

# 674
#add_executable(codeforces cf647/b.cpp)

# 651
#add_executable(codeforces cf651/c.cpp)

# 652
#add_executable(codeforces cf652/c.cpp)
#add_executable(codeforces cf652/b.cpp)

# EDU 89
#add_executable(codeforces ed89/c.cpp)
#add_executable(codeforces ed89/b.cpp)

# EDU 90
#add_executable(codeforces ed90/a.cpp)
#add_executable(codeforces ed90/b.cpp)
#add_executable(codeforces ed90/c.cpp)
#add_executable(codeforces ed90/d.cpp)
#add_executable(codeforces ed90/f.cpp)
#add_executable(codeforces ed90/e.cpp)

# 653
#add_executable(codeforces cf653/a.cpp)
#add_executable(codeforces cf653/b.cpp)
#add_executable(codeforces cf653/c.cpp)
#add_executable(codeforces cf653/d.cpp)
#add_executable(codeforces cf653/e.cpp)
#add_executable(codeforces cf653/f.cpp)

# 654
#add_executable(codeforces cf654/a.cpp)
#add_executable(codeforces cf654/b.cpp)
#add_executable(codeforces cf654/c.cpp)
#add_executable(codeforces cf654/d.cpp)
#add_executable(codeforces cf654/e.cpp)


# GB 8
#add_executable(codeforces gb8/c.cpp)

# GB 9
#add_executable(codeforces gb9/a.cpp)
#add_executable(codeforces gb9/b.cpp )
#add_executable(codeforces gb9/c.cpp )
#add_executable(codeforces gb9/d.cpp )
#add_executable(codeforces gb9/e.cpp )
#add_executable(codeforces gb9/f.cpp )

# 655
#add_executable(codeforces cf655/a.cpp)
#add_executable(codeforces cf655/b.cpp)
#add_executable(codeforces cf655/c.cpp)
#add_executable(codeforces cf655/d.cpp)
#add_executable(codeforces cf655/e.cpp)
#add_executable(codeforces cf655/f.cpp)


# EDU 91
#add_executable(codeforces ed91/a.cpp)
#add_executable(codeforces ed91/b.cpp)
#add_executable(codeforces ed91/c.cpp)
#add_executable(codeforces ed91/d.cpp)
#add_executable(codeforces ed91/e.cpp)

# 649
#add_executable(codeforces cf649/a.cpp)
#add_executable(codeforces cf649/b.cpp)


# 656
#add_executable(codeforces cf656/a.cpp)
# add_executable(codeforces cf656/b.cpp)
#add_executable(codeforces cf656/c.cpp)
#add_executable(codeforces cf656/d.cpp)
#add_executable(codeforces cf656/e.cpp)
#add_executable(codeforces cf656/g.cpp)

# 657
#add_executable(codeforces cf657/a.cpp)
#add_executable(codeforces cf657/b.cpp)
#add_executable(codeforces cf657/c.cpp)
#add_executable(codeforces cf657/d.cpp)

# 658
#add_executable(codeforces cf658/a.cpp)
#add_executable(codeforces cf658/a1.cpp)
#add_executable(codeforces cf658/b.cpp)
#add_executable(codeforces cf658/c.cpp)
#add_executable(codeforces cf658/d.cpp)

# 659
#add_executable(codeforces cf659/a.cpp)


# EDU 92
#add_executable(codeforces ed92/a.cpp)
#add_executable(codeforces ed92/b.cpp)
#add_executable(codeforces ed92/c.cpp)
#add_executable(codeforces ed92/d.cpp)
#add_executable(codeforces ed92/e.cpp)

# 660
#add_executable(codeforces cf660/a.cpp)
#add_executable(codeforces cf660/b.cpp)
#add_executable(codeforces cf660/c.cpp)
#add_executable(codeforces cf660/d.cpp)

# 661
#add_executable(codeforces cf661/a.cpp)
#add_executable(codeforces cf661/b.cpp)
#add_executable(codeforces cf661/c.cpp)
#add_executable(codeforces cf661/d.cpp)


# 662
#add_executable(codeforces cf662/a.cpp)
#add_executable(codeforces cf662/b.cpp)
#add_executable(codeforces cf662/c.cpp)
#add_executable(codeforces cf662/d.cpp)

# 663
#add_executable(codeforces cf663/a.cpp)
#add_executable(codeforces cf663/b.cpp)
#add_executable(codeforces cf663/c.cpp)
#add_executable(codeforces cf663/d.cpp)


# 664
#add_executable(codeforces cf664/a.cpp)
#add_executable(codeforces cf664/b.cpp)
#add_executable(codeforces cf664/c.cpp)
#add_executable(codeforces cf664/d.cpp)

# EDU 93
#add_executable(codeforces ed93/a.cpp)
#add_executable(codeforces ed93/b.cpp)
#add_executable(codeforces ed93/c.cpp)
#add_executable(codeforces ed93/d.cpp)
#add_executable(codeforces ed92/e.cpp)

#add_executable(main main.cpp)